todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-dep
  namespace: project 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes: # Define volume
        - name: image-pv
          persistentVolumeClaim:
            claimName: image-pvc
      containers:
        - name: todoapp
          image: blackthest/todoapp:1.5
          volumeMounts: # Mount volume to container
            - name: image-pv
              mountPath: /image-cache
